# kubelore

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  COMPETITOR_SCAN.md  PRIVACY_AND_SECURITY.md  RELEASE_CHECKLIST.md
docs/assets/: demo-report.html
examples/bundles/: config-missing.json  image-not-found.json  oom.json  probe-failure.json  scheduling-failure.json
scripts/: demo.py  package_release.py  release_check.py  render_demo.py  secret_scan.py  verify.py
src/kubelore/: __init__.py  api.py  cli.py
src/kubelore/adapters/: __init__.py  files.py
src/kubelore/domain/: graph.py  models.py  redaction.py  rules.py
src/kubelore/services/: __init__.py  analyze.py  render.py
tests/: __init__.py
tests/e2e/: test_interfaces.py
tests/integration/: test_file_analysis.py  test_privacy.py
tests/unit/: test_graph_and_redaction.py  test_rules.py
