[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kubelore"
version = "0.1.0"
description = "Offline, evidence-backed Kubernetes incident narratives."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "KubeLore contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi==0.139.2",
  "networkx==3.5",
  "pydantic==2.11.7",
  "starlette==1.3.1",
  "uvicorn==0.51.0",
  "kubernetes==33.1.0",
]

[project.optional-dependencies]
dev = [
  "build==1.3.0",
  "httpx==0.28.1",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.8",
]

[project.scripts]
kubelore = "kubelore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kubelore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["kubelore"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["kubelore"]

[[tool.mypy.overrides]]
module = ["networkx"]
ignore_missing_imports = true
